# cource_work_3

./: README.md  config.py  pyproject.toml
src/: classes.py  func.py  main.py
tests/: test_classes.py  test_func.py
