[tool.poetry]
name = "cource-work3"
version = "0.1.0"
description = ""
authors = ["Konstantin Sobolev <comediant683@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
